--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 black = "22.10.0"
+pylint = "2.15.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -21,3 +22,10 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 skip-string-normalization = true
 target-version = ["py38"]
+
+[tool.pylint.main]
+fail-under = 10.0
+py-version = "3.8"
+
+[tool.pylint."messages control"]
+disable = ["logging-fstring-interpolation"]
