--- a/http_requests/Dockerfile
+++ b/http_requests/Dockerfile
@@ -1,12 +1,12 @@
-# Dockerfile for running the coroutines program on Alpine Linux using Python 3.11
+# Dockerfile for running the http_requests program on Alpine Linux using Python 3.11
 # Author: Andrew Jarombek
-# Date: 9/9/2022
+# Date: 1/24/2023
 
 FROM python:3.11-alpine
 
 LABEL maintainer="andrew@jarombek.com" \
       version="1.0.0" \
-      description="Dockerfile for the coroutines Python program"
+      description="Dockerfile for the http_requests Python program"
 
 WORKDIR src
 COPY . .
