--- a/.github/workflows/black_formatting.yml
+++ b/.github/workflows/black_formatting.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   black_formatting:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - run: echo "Job running on a ${{ runner.os }} server"
 
@@ -29,3 +30,12 @@ jobs:
         with:
           options: "--check"
           src: "."
+
+      - name: Install Poetry, Pylint, and project dependencies
+        run: |
+          pip install poetry
+          poetry config virtualenvs.create false
+          poetry install
+
+      - name: Pylint code analysis
+        run: pylint $(git ls-files '*.py')
