mojo initial work

--- a/.github/workflows/black_formatting.yml
+++ b/.github/workflows/black_formatting.yml
@@ -22,6 +22,11 @@ jobs:
     steps:
       - run: echo "Job running on a ${{ runner.os }} server"
 
+      - name: Install Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
       - name: Check out repository code
         uses: actions/checkout@v3
 
